--- a/index.html
+++ b/index.html
@@ -4,35 +4,37 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Movie-App</title>
-    <link rel="stylesheet" href="style.css">
+    <title>Movie Search App</title>
+    <link rel="stylesheet" href="style.css"> <!-- Link to external CSS file -->
 </head>
 
 <body>
     <div class="container">
         <nav>
             <div class="logo">
-                <h1>Movie-App</h1>
+                <h1>Movie Search App</h1> <!-- Logo -->
             </div>
             <div class="searchBar">
-                <input type="text" placeholder="Search Here" id="searchInput">
-                <button id="searchBtn">Search</button>
-                <div id="autocompleteList" class="autocomplete-items"></div>
+                <input type="text" id="searchInput" placeholder="Search movie...">
+                <button id="searchBtn">Search</button> <!-- Search input and button -->
+                <div id="autocompleteList" class="autocomplete-items"></div> <!-- Autocomplete list -->
             </div>
         </nav>
 
         <div class="content">
-            <div class="cardGrid" id="movieGrid"> <!-- Grid container for movies -->
+            <div class="cardGrid" id="movieGrid">
+                <!-- Movie grid for search results -->
             </div>
-
             <div class="sidebar">
-                <h2>Favorites</h2>
-                <div id="favoriteGrid"> <!-- Sidebar container for favorite movies -->
+                <h2>Favorites</h2> <!-- Sidebar for favorite movies -->
+                <div id="favoriteGrid" class="favoriteGrid">
+                    <!-- Grid for displaying favorite movies -->
                 </div>
             </div>
         </div>
     </div>
-    <script src="script.js"></script>
+
+    <script src="script.js"></script> <!-- Link to external JavaScript file -->
 </body>
 
 </html>
