--- a/index.html
+++ b/index.html
@@ -33,6 +33,22 @@
             </div>
         </div>
     </div>
+    <!-- Modal for displaying movie details -->
+    <div id="modal" class="modal">
+        <div class="modal-content">
+            <span class="close">&times;</span>
+            <img src="" alt="">
+            <div class="modal-text">
+                <h1>Title</h1>
+                <p><strong>Year:</strong> Year</p>
+                <p><strong>Genre:</strong> Genre</p>
+                <p><strong>Plot:</strong> Plot</p>
+                <p><strong>Director:</strong> Director</p>
+                <p><strong>Actors:</strong> Actors</p>
+            </div>
+        </div>
+    </div>
+
 
     <script src="script.js"></script> <!-- Link to external JavaScript file -->
 </body>
